<resources>
    <string name="app_name">YouSeeHousing</string>
    <string name="welcome">Welcome !</string>
    <string name="action_filters">Filters</string>
    <string name="action_logout">Log out</string>
    <string name="default_listing_title">Undefined Housing Listing</string>
    <string name="default_listing_caption">$0.00/mo 0BR/0BA</string>
    <string name="bottombar_preferences">Profile</string>
    <string name="bottombar_listing">Listing</string>
    <string name="bottombar_favorites">Favorites</string>
    <string name="prompt">Select…</string>
    
    <string-array name="distanceList">
        <item>Any</item>
        <item>1 Mile</item>
        <item>2 Miles</item>
        <item>3 Miles</item>
        <item>4 Miles</item>
        <item>5 Miles</item>
        <item>10 Miles</item>
        <item>15 Miles</item>
        <item>20+ Miles</item>


    </string-array>

    <string-array name="sizeList">
        <item>Any</item>
        <item>500 sqft</item>
        <item>600 sqft</item>
        <item>700 sqft</item>
        <item>800 sqft</item>
        <item>900 sqft</item>
        <item>1000+ sqft</item>
    </string-array>


    <string-array name="bedList">
        <item>Any</item>
        <item>1 Studio</item>
        <item>1 Bed</item>
        <item>1.5 Bed</item>
        <item>2 Bed</item>
        <item>2.5 Bed</item>
        <item>3 Bed</item>
        <item>3.5 Bed</item>
        <item>4+ Bed</item>
    </string-array>

    <string-array name="bathroomList">
        <item>Any</item>
        <item>1 Bathroom</item>
        <item>1.5 Bathroom</item>
        <item>2 Bathroom</item>
        <item>2.5 Bathroom</item>
        <item>3+ Bathroom</item>
    </string-array>

    <string-array name="wakeSleepList">
        <item>Any</item>
        <item>1 AM</item>
        <item>2 AM</item>
        <item>3 AM</item>
        <item>4 AM</item>
        <item>5 AM</item>
        <item>6 AM</item>
        <item>7 AM</item>
        <item>8 AM</item>
        <item>9 AM</item>
        <item>10 AM</item>
        <item>11 AM</item>
        <item>12 AM</item>
        <item>1 PM</item>
        <item>2 PM</item>
        <item>3 PM</item>
        <item>4 PM</item>
        <item>5 PM</item>
        <item>6 PM</item>
        <item>7 PM</item>
        <item>8 PM</item>
        <item>9 PM</item>
        <item>10 PM</item>
        <item>11 PM</item>
        <item>12 PM</item>
    </string-array>

    <string-array name="smokeList">
        <item>Any</item>
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="guestList">
        <item>Any</item>
        <item>No guests ever</item>
        <item>Guest are fine as long as im told before</item>
        <item>Guest are always allowed</item>
    </string-array>

    <string-array name="noiseList">
        <item>Any</item>
        <item>Whisper Only</item>
        <item>Normal Indoor Voice</item>
        <item>Shout</item>
    </string-array>

    <string-array name="durationList">
        <item>Any</item>
        <item>1 Month</item>
        <item>3 Months</item>
        <item>4 Months</item>
        <item>9 Months</item>
        <item>12+ Months</item>
    </string-array>

    <string-array name="genderList">
        <item>Male</item>
        <item>Female</item>
        <item>Nonbinary</item>
    </string-array>



    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="nextButton">Next</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>Gender:

    <!-- For SignUp page -->
    <string name="typeEmail">Email:</string>
    <string name="password">Password</string>
    <string name="typePw">Password:</string>
    <string name="confirmPw">Confirm Password</string>
    <string name="typeConfirmPw">Confirm Password:</string>
    <string name="typeFirstName">First Name:</string>
    <string name="firstName">First</string>
    <string name="typeLastName">Last Name:</string>
    <string name="lastName">Last</string>
    <string name="typeDOB">Date of Birth:</string>
    <string name="typeCity">City:</string>
    <string name="typeGender">Gender:</string>


    <string name="emailEx">email@example.com</string>
    <string name="recoverPw">Recover Password</string>
    <string name="recoverPwInst"> Please enter your email address below.\n
        (You will receive an email with instruction to change your password.)</string>

    <string name="changePw">Change Password</string>
    <string name="changePw_currentPw">Current password</string>
    <string name="changePw_newPw">New password</string>
    <string name="changePw_newPwConfirm">Confirm new password</string>
    <string name="furnished_true">Furnished</string>
    <string name="furnished_false">Not Furnished</string>

</resources>
