<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="715dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/changePw"
                android:textSize="36sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/changePw_currentPw" />

                <EditText
                    android:id="@+id/currentPw"
                    android:layout_width="236dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="Current password"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/changePw_newPw" />

                <EditText
                    android:id="@+id/newPw"
                    android:layout_width="237dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:hint="@string/changePw_newPw"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/changePw_newPwConfirm" />

                <EditText
                    android:id="@+id/newPwConfirm"
                    android:layout_width="237dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/changePw_newPwConfirm"
                    android:inputType="textPassword" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <Button
                android:id="@+id/changePwButtonFinal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="createAccountOnClick"
                android:text="@string/changePw" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>